deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: jmeritt/sonarr
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "500Mi"
          limits:
            cpu: "250m"
            memory: "1024Mi"
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
        - name: tv
          mountPath: /htpc/tv
      # So far nothing works for this to get the directory showing up as the right user
      # NFS specific - i can make it work in iSCSI
      securityContext:
        runAsUser: 2580
        runAsGroup: 2580
      volumes:
      - name: config
        emptyDir: {}
      - name: config-src
        configMap: 
          name: sonarr-config
      - name: downloads
        emptyDir: {}
      - name: tv
        emptyDir: {}
